# cq-enclosure

./: .gitignore  LICENSE  README.md  pyproject.toml
cq_enclosure/: __init__.py  builders.py  enclosure.py  enclosure_parameters.py
examples/: generic_enclosure.py
