[project]
name = "cq-enclosure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.5.2",
    "setuptools>=80.0.0",
    "ocp-tessellate==3.0.11",
    "ocp-vscode>=2.7.1",
    "pydantic>=2.10.5",
    "pip>=25.1",
]
