[project]
name = "cq-enclosure"
version = "0.1.0"
description = "Parametric IP66 enclosure generator for 3D printing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.5.2",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = [
    "ocp-tessellate==3.0.11",
    "ocp-vscode>=2.7.1",
    "pip>=25.1",
]

[project.optional-dependencies]
build = ["setuptools"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
